--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-social-icons": "5.15.0",
     "react-syntax-highlighter": "15.5.0",
     "react-textarea-autosize": "8.5.2",
+    "react-toastify": "9.1.3",
     "reaptcha": "1.12.1",
     "rehype-raw": "6.1.1",
     "remark-gfm": "3.0.1",
