feat: show progress bar

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@kuma-ui/core": "1.1.0",
     "@next/bundle-analyzer": "13.4.12",
     "@szhsin/react-menu": "4.0.2",
+    "@total-typescript/ts-reset": "0.4.2",
     "@types/logrocket-react": "3.0.0",
     "@types/node": "20.4.5",
     "@types/nodemailer": "6.4.9",
@@ -44,6 +45,7 @@
     "next": "13.4.12",
     "next-sitemap": "4.1.8",
     "nextjs-google-analytics": "2.3.3",
+    "nextjs-toploader": "1.4.2",
     "nodemailer": "6.9.4",
     "parse-md": "3.0.3",
     "prettier": "3.0.0",
