--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react-markdown": "8.0.7",
     "react-scrollbar-size": "5.0.0",
     "react-social-icons": "5.15.0",
-    "react-syntax-highlighter": "15.5.0",
+    "react-syntax-highlighter": "npm:@fengkx/react-syntax-highlighter@15.6.1",
     "react-textarea-autosize": "8.5.2",
     "react-toastify": "9.1.3",
     "reaptcha": "1.12.1",
