--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@commitlint/config-conventional": "17.6.7",
     "@hookform/error-message": "2.0.1",
     "@kuma-ui/core": "1.1.1",
+    "@kuma-ui/next-plugin": "1.1.3",
     "@next/bundle-analyzer": "13.4.12",
     "@szhsin/react-menu": "4.0.2",
     "@total-typescript/ts-reset": "0.4.2",
@@ -80,9 +81,6 @@
     "swr": "2.2.0",
     "typescript": "5.1.6",
     "usehooks-ts": "2.9.1"
-  },
-  "devDependencies": {
-    "@kuma-ui/next-plugin": "1.1.3"
   },
   "name": "kk-web5",
   "overrides": {
