--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react-syntax-highlighter": "npm:@fengkx/react-syntax-highlighter@15.6.1",
     "react-textarea-autosize": "8.5.2",
     "react-toastify": "9.1.3",
+    "react-use-measure": "2.1.1",
+    "react-use-scroll-position": "2.0.0",
     "reaptcha": "1.12.1",
     "rehype-raw": "6.1.1",
     "remark-gfm": "3.0.1",
