--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "5.62.0",
     "@uphold/commitlint-config": "1.1.1",
     "@vercel/analytics": "1.0.2",
+    "@vercel/speed-insights": "1.0.2",
     "axios": "1.4.0",
     "commitlint-plugin-tense": "1.0.2",
     "cookies-next": "2.1.2",
