--- a/package.json
+++ b/package.json
@@ -1,56 +1,24 @@
 {
   "dependencies": {
-    "@commitlint/cli": "17.7.1",
-    "@commitlint/config-conventional": "17.7.0",
     "@hookform/error-message": "2.0.1",
     "@kuma-ui/core": "1.1.3",
     "@kuma-ui/next-plugin": "1.1.5",
     "@next/bundle-analyzer": "13.4.13",
     "@szhsin/react-menu": "4.0.3",
-    "@total-typescript/ts-reset": "0.4.2",
-    "@types/logrocket-react": "3.0.0",
-    "@types/node": "20.4.10",
-    "@types/nodemailer": "6.4.9",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "@types/react-lines-ellipsis": "0.15.1",
-    "@types/react-syntax-highlighter": "15.5.7",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "@uphold/commitlint-config": "1.1.1",
     "@vercel/analytics": "1.0.2",
     "@vercel/speed-insights": "1.0.2",
     "axios": "1.4.0",
-    "commitlint-plugin-tense": "1.0.2",
     "cookies-next": "2.1.2",
     "dayjs": "1.11.9",
-    "eslint": "8.47.0",
-    "eslint-config-google": "0.14.0",
-    "eslint-config-next": "13.4.13",
-    "eslint-config-prettier": "8.10.0",
-    "eslint-config-standard": "17.1.0",
-    "eslint-plugin-ext": "0.1.0",
-    "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-import": "2.28.0",
-    "eslint-plugin-n": "16.0.1",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-sort-destructure-keys": "1.5.0",
-    "eslint-plugin-sort-keys-fix": "1.1.2",
-    "eslint-plugin-typescript-sort-keys": "2.3.0",
-    "eslint-plugin-unused-imports": "2.0.0",
     "github-markdown-css": "5.2.0",
-    "husky": "8.0.3",
-    "lint-staged": "13.2.3",
     "logrocket": "4.0.4",
     "logrocket-react": "5.0.1",
     "markdown-to-text": "0.1.1",
     "next": "13.4.13",
-    "next-sitemap": "4.2.2",
     "nextjs-google-analytics": "2.3.3",
     "nextjs-toploader": "1.4.2",
     "nodemailer": "6.9.4",
     "parse-md": "3.0.3",
-    "prettier": "3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
@@ -69,6 +37,43 @@
     "rehype-raw": "6.1.1",
     "remark-gfm": "3.0.1",
     "ress": "5.0.2",
+    "swr": "2.2.1",
+    "usehooks-ts": "2.9.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "17.7.1",
+    "@commitlint/config-conventional": "17.7.0",
+    "@piro0919/next-unused": "0.0.1",
+    "@total-typescript/ts-reset": "0.4.2",
+    "@types/logrocket-react": "3.0.0",
+    "@types/node": "20.4.10",
+    "@types/nodemailer": "6.4.9",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "@types/react-lines-ellipsis": "0.15.1",
+    "@types/react-syntax-highlighter": "15.5.7",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "@uphold/commitlint-config": "1.1.1",
+    "commitlint-plugin-tense": "1.0.2",
+    "eslint": "8.47.0",
+    "eslint-config-google": "0.14.0",
+    "eslint-config-next": "13.4.13",
+    "eslint-config-prettier": "8.10.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-ext": "0.1.0",
+    "eslint-plugin-filenames": "1.3.2",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-n": "16.0.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-sort-destructure-keys": "1.5.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "eslint-plugin-typescript-sort-keys": "2.3.0",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.3",
+    "next-sitemap": "4.2.2",
+    "prettier": "3.0.1",
     "sass": "1.65.1",
     "sass-mq": "6.0.0",
     "stylelint": "15.10.2",
@@ -81,9 +86,7 @@
     "stylelint-declaration-block-no-ignored-properties": "2.7.0",
     "stylelint-order": "6.0.3",
     "stylelint-sass-render-errors": "3.0.2",
-    "swr": "2.2.1",
-    "typescript": "5.1.6",
-    "usehooks-ts": "2.9.1"
+    "typescript": "5.1.6"
   },
   "name": "kk-web5",
   "overrides": {
@@ -98,6 +101,7 @@
   "scripts": {
     "build": "ANALYZE=true next build",
     "dev": "next dev",
+    "find:unused": "next-unused",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:style": "stylelint --fix '**/*.scss'",
