feat: use progressive on react-hook-form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "jsx": "preserve",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "noEmit": true,
     "paths": {
       "@/*": ["./src/*"]
@@ -20,8 +20,7 @@
     ],
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true,
-    "target": "es5"
+    "strict": true
   },
   "exclude": ["node_modules"],
   "include": [
