--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
     "next/core-web-vitals",
     "prettier"
   ],
-  "ignorePatterns": ["*.d.ts", "*.js"],
+  "ignorePatterns": ["*.d.ts", "*.js", "*.mjs"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": ["./tsconfig.json"],
