--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "dependencies": {
     "@hookform/error-message": "2.0.1",
+    "@hookform/resolvers": "3.4.2",
     "@kuma-ui/core": "1.1.3",
     "@kuma-ui/next-plugin": "1.1.5",
     "@next/bundle-analyzer": "13.4.13",
     "@szhsin/react-menu": "4.0.3",
+    "@t3-oss/env-nextjs": "0.10.1",
     "@vercel/analytics": "1.0.2",
     "@vercel/speed-insights": "1.0.2",
     "axios": "1.4.0",
     "cookies-next": "2.1.2",
     "dayjs": "1.11.9",
     "github-markdown-css": "5.2.0",
+    "i18next": "23.11.5",
     "logrocket": "4.0.4",
     "logrocket-react": "5.0.1",
     "markdown-to-text": "0.1.1",
@@ -21,7 +24,8 @@
     "parse-md": "3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.45.4",
+    "react-google-recaptcha": "3.1.0",
+    "react-hook-form": "7.51.5",
     "react-hotjar": "6.1.0",
     "react-infinite-scroll-component": "6.1.0",
     "react-loader-spinner": "5.3.4",
@@ -33,12 +37,13 @@
     "react-toastify": "9.1.3",
     "react-use-measure": "2.1.1",
     "react-use-scroll-position": "2.0.0",
-    "reaptcha": "1.12.1",
     "rehype-raw": "6.1.1",
     "remark-gfm": "3.0.1",
     "ress": "5.0.2",
     "swr": "2.2.1",
-    "usehooks-ts": "2.9.1"
+    "usehooks-ts": "2.9.1",
+    "zod": "3.23.8",
+    "zod-i18n-map": "2.27.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.7.1",
@@ -50,12 +55,13 @@
     "@types/nodemailer": "6.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "@types/react-lines-ellipsis": "0.15.1",
+    "@types/react-google-recaptcha": "2.1.9",
     "@types/react-syntax-highlighter": "15.5.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "@uphold/commitlint-config": "1.1.1",
     "commitlint-plugin-tense": "1.0.2",
+    "depcheck": "1.4.7",
     "eslint": "8.47.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-next": "13.4.13",
@@ -101,6 +107,7 @@
   "scripts": {
     "build": "ANALYZE=true next build",
     "check:unused": "next-unused --error-on-unused-files",
+    "depcheck": "depcheck",
     "dev": "next dev",
     "find:unused": "next-unused",
     "lint": "next lint",
