--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@commitlint/cli": "17.7.1",
     "@commitlint/config-conventional": "17.7.0",
     "@piro0919/next-unused": "0.2.1",
+    "@secretlint/secretlint-rule-preset-recommend": "8.2.4",
     "@total-typescript/ts-reset": "0.4.2",
     "@types/logrocket-react": "3.0.0",
     "@types/node": "20.4.10",
@@ -60,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "@uphold/commitlint-config": "1.1.1",
+    "better-typescript-lib": "2.7.0",
     "commitlint-plugin-tense": "1.0.2",
     "depcheck": "1.4.7",
     "eslint": "8.47.0",
@@ -82,6 +84,7 @@
     "prettier": "3.0.1",
     "sass": "1.65.1",
     "sass-mq": "6.0.0",
+    "secretlint": "8.2.4",
     "stylelint": "15.10.2",
     "stylelint-config-css-modules": "4.3.0",
     "stylelint-config-prettier-scss": "1.0.0",
@@ -116,6 +119,7 @@
     "postbuild": "next-sitemap",
     "prepare": "npx husky install",
     "prettier": "prettier --write .",
+    "secretlint": "secretlint '**/*'",
     "start": "next start",
     "stylelint-check": "stylelint-config-prettier-scss-check",
     "type-check": "tsc --noemit"
