--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,6 +56,15 @@
         "max": 1
       }
     ],
+    "no-unused-vars": [
+      "error",
+      {
+        "args": "all",
+        "argsIgnorePattern": "^_",
+        "caughtErrors": "none",
+        "ignoreRestSiblings": true
+      }
+    ],
     "padding-line-between-statements": [
       "error",
       {
