--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-ext": "0.1.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-markdownlint": "0.6.0",
     "eslint-plugin-n": "16.0.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
