--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-config-next": "13.4.13",
     "eslint-config-prettier": "8.10.0",
     "eslint-config-standard": "17.1.0",
+    "eslint-plugin-css": "0.11.0",
     "eslint-plugin-ext": "0.1.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.28.0",
