ci: transition from husky and lint-staged to lefthook

--- a/package.json
+++ b/package.json
@@ -81,8 +81,7 @@
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-typescript-sort-keys": "2.3.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "husky": "8.0.3",
-    "lint-staged": "13.2.3",
+    "lefthook": "1.7.18",
     "next-sitemap": "4.2.2",
     "prettier": "3.0.1",
     "sass": "1.65.1",
@@ -116,11 +115,11 @@
     "depcheck": "depcheck",
     "dev": "next dev",
     "find:unused": "next-unused",
+    "lefthook:precommit": "npx lefthook run pre-commit",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:style": "stylelint --fix '**/*.scss'",
     "postbuild": "next-sitemap",
-    "prepare": "npx husky install",
     "prettier": "prettier --write .",
     "secretlint": "secretlint '**/*'",
     "start": "next start",
