--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,7 +1,7 @@
 pre-commit:
   parallel: true
   commands:
-    prettier:
+    pprettier:
       glob: "*"
       run: npx prettier --ignore-unknown --write {staged_files}
     secretlint:
@@ -15,4 +15,4 @@ pre-commit:
       run: npx tsc --noemit
     eslint:
       glob: "*.{js,jsx,ts,tsx}"
-      run: npx next lint src --fix {staged_files}
+      run: npx eslint --fix {staged_files}
