fix: rename pre-commit command from 'pprettier' to 'prettier' in lefthook configuration

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,7 +1,7 @@
 pre-commit:
   parallel: true
   commands:
-    pprettier:
+    prettier:
       glob: "*"
       run: npx prettier --ignore-unknown --write {staged_files}
     secretlint:
