--- a/package.json
+++ b/package.json
@@ -77,20 +77,37 @@
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-typescript-sort-keys": "2.3.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "lefthook": "1.7.18",
+    "lefthook": "1.11.3",
     "next-sitemap": "4.2.2",
     "prettier": "3.0.1",
     "secretlint": "8.2.4",
+    "stylelint": "16.16.0",
+    "stylelint-config-css-modules": "4.4.0",
+    "stylelint-config-recommended": "15.0.0",
+    "stylelint-css-modules-no-global-scoped-selector": "1.0.2",
+    "stylelint-declaration-block-no-ignored-properties": "2.8.0",
+    "stylelint-high-performance-animation": "1.11.0",
+    "stylelint-no-unused-selectors": "1.0.40",
+    "stylelint-order": "6.0.4",
     "typescript": "5.1.6"
   },
   "name": "kk-web5",
+  "overrides": {
+    "stylelint-css-modules-no-global-scoped-selector": {
+      "stylelint": "16.16.0"
+    },
+    "stylelint-no-unused-selectors": {
+      "stylelint": "16.16.0"
+    }
+  },
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lefthook:precommit": "npx lefthook run pre-commit",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "lint:secret": "npx secretlint --maskSecrets '**/*'",
+    "lint:style": "stylelint --fix '**/*.css'",
     "postbuild": "next-sitemap",
     "prettier": "prettier --write .",
     "secretlint": "secretlint '**/*'",
