--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "logrocket": "4.0.4",
     "logrocket-react": "5.0.1",
     "markdown-to-text": "0.1.1",
-    "next": "13.4.13",
+    "next": "15.3.1",
     "nextjs-google-analytics": "2.3.3",
     "nextjs-toploader": "1.4.2",
     "nodemailer": "6.9.4",
     "parse-md": "3.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-google-recaptcha": "3.1.0",
     "react-hook-form": "7.51.5",
     "react-hotjar": "6.1.0",
     "react-infinite-scroll-component": "6.1.0",
     "react-loader-spinner": "5.3.4",
-    "react-markdown": "8.0.7",
+    "react-markdown": "10.1.0",
     "react-scrollbar-size": "5.0.0",
     "react-social-icons": "6.24.0",
     "react-syntax-highlighter": "npm:@fengkx/react-syntax-highlighter@15.6.1",
@@ -36,8 +36,8 @@
     "react-toastify": "9.1.3",
     "react-use-measure": "2.1.1",
     "react-use-scroll-position": "2.0.0",
-    "rehype-raw": "6.1.1",
-    "remark-gfm": "3.0.1",
+    "rehype-raw": "7.0.0",
+    "remark-gfm": "4.0.1",
     "ress": "5.0.2",
     "swr": "2.2.1",
     "usehooks-ts": "2.9.1",
@@ -47,36 +47,37 @@
   "devDependencies": {
     "@commitlint/cli": "17.7.1",
     "@commitlint/config-conventional": "17.7.0",
+    "@eslint/compat": "1.2.7",
+    "@eslint/eslintrc": "^3",
+    "@eslint/js": "9.23.0",
     "@secretlint/secretlint-rule-preset-recommend": "8.2.4",
     "@total-typescript/ts-reset": "0.4.2",
     "@types/logrocket-react": "3.0.0",
     "@types/node": "20.4.10",
     "@types/nodemailer": "6.4.9",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/react-google-recaptcha": "2.1.9",
     "@types/react-syntax-highlighter": "15.5.7",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "8.27.0",
+    "@typescript-eslint/parser": "8.27.0",
     "@uphold/commitlint-config": "1.1.1",
     "better-typescript-lib": "2.7.0",
     "commitlint-plugin-tense": "1.0.2",
-    "eslint": "8.47.0",
-    "eslint-config-google": "0.14.0",
-    "eslint-config-next": "13.4.13",
-    "eslint-config-prettier": "8.10.0",
-    "eslint-config-standard": "17.1.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.1",
+    "eslint-config-prettier": "10.1.1",
     "eslint-plugin-css": "0.11.0",
+    "eslint-plugin-css-modules": "2.12.0",
     "eslint-plugin-ext": "0.1.0",
     "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-import": "2.28.0",
-    "eslint-plugin-markdownlint": "0.6.0",
-    "eslint-plugin-n": "16.0.1",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-sort-destructure-keys": "1.5.0",
-    "eslint-plugin-sort-keys-fix": "1.1.2",
-    "eslint-plugin-typescript-sort-keys": "2.3.0",
-    "eslint-plugin-unused-imports": "2.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-no-unsanitized": "4.1.2",
+    "eslint-plugin-perfectionist": "4.10.1",
+    "eslint-plugin-promise": "7.2.1",
+    "eslint-plugin-security": "3.0.1",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "eslint-plugin-write-good-comments": "0.2.0",
     "lefthook": "1.11.3",
     "next-sitemap": "4.2.2",
     "prettier": "3.0.1",
@@ -103,7 +104,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:secret": "npx secretlint --maskSecrets '**/*'",
