--- a/package.json
+++ b/package.json
@@ -1,103 +1,110 @@
 {
   "dependencies": {
     "@hookform/error-message": "2.0.1",
-    "@hookform/resolvers": "3.4.2",
-    "@szhsin/react-menu": "4.0.3",
-    "@t3-oss/env-nextjs": "0.10.1",
-    "@vercel/analytics": "1.0.2",
-    "@vercel/og": "0.6.2",
-    "@vercel/speed-insights": "1.0.2",
-    "axios": "1.4.0",
-    "cookies-next": "2.1.2",
-    "dayjs": "1.11.9",
-    "github-markdown-css": "5.2.0",
-    "i18next": "23.11.5",
-    "logrocket": "4.0.4",
-    "logrocket-react": "5.0.1",
+    "@hookform/resolvers": "5.0.1",
+    "@szhsin/react-menu": "4.4.0",
+    "@t3-oss/env-nextjs": "0.13.0",
+    "@vercel/analytics": "1.5.0",
+    "@vercel/og": "0.6.8",
+    "@vercel/speed-insights": "1.2.0",
+    "axios": "1.9.0",
+    "cookies-next": "5.1.0",
+    "dayjs": "1.11.13",
+    "github-markdown-css": "5.8.1",
+    "i18next": "25.0.2",
+    "logrocket": "10.0.0",
+    "logrocket-react": "6.0.3",
     "markdown-to-text": "0.1.1",
     "next": "15.3.1",
-    "nextjs-google-analytics": "2.3.3",
-    "nextjs-toploader": "1.4.2",
-    "nodemailer": "6.9.4",
+    "nextjs-google-analytics": "2.3.7",
+    "nextjs-toploader": "3.8.16",
+    "nodemailer": "6.10.1",
     "parse-md": "3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "3.1.0",
-    "react-hook-form": "7.51.5",
-    "react-hotjar": "6.1.0",
+    "react-hook-form": "7.56.1",
+    "react-hotjar": "6.3.1",
     "react-infinite-scroll-component": "6.1.0",
-    "react-loader-spinner": "5.3.4",
+    "react-loader-spinner": "6.1.6",
     "react-markdown": "10.1.0",
     "react-scrollbar-size": "5.0.0",
     "react-social-icons": "6.24.0",
     "react-syntax-highlighter": "npm:@fengkx/react-syntax-highlighter@15.6.1",
-    "react-textarea-autosize": "8.5.2",
-    "react-toastify": "9.1.3",
-    "react-use-measure": "2.1.1",
+    "react-textarea-autosize": "8.5.9",
+    "react-toastify": "11.0.5",
+    "react-use-measure": "2.1.7",
     "react-use-scroll-position": "2.0.0",
     "rehype-raw": "7.0.0",
     "remark-gfm": "4.0.1",
     "ress": "5.0.2",
-    "swr": "2.2.1",
-    "usehooks-ts": "2.9.1",
-    "zod": "3.23.8",
+    "swr": "2.3.3",
+    "usehooks-ts": "3.1.1",
+    "zod": "3.24.3",
     "zod-i18n-map": "2.27.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.7.1",
-    "@commitlint/config-conventional": "17.7.0",
-    "@eslint/compat": "1.2.7",
+    "@commitlint/cli": "19.8.0",
+    "@commitlint/config-conventional": "19.8.0",
+    "@eslint/compat": "1.2.8",
     "@eslint/eslintrc": "^3",
-    "@eslint/js": "9.23.0",
-    "@secretlint/secretlint-rule-preset-recommend": "8.2.4",
-    "@total-typescript/ts-reset": "0.4.2",
-    "@types/logrocket-react": "3.0.0",
-    "@types/node": "20.4.10",
-    "@types/nodemailer": "6.4.9",
+    "@eslint/js": "9.25.1",
+    "@secretlint/secretlint-rule-preset-recommend": "9.3.1",
+    "@total-typescript/ts-reset": "0.6.1",
+    "@types/logrocket-react": "3.0.3",
+    "@types/node": "22.15.3",
+    "@types/nodemailer": "6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-google-recaptcha": "2.1.9",
-    "@types/react-syntax-highlighter": "15.5.7",
-    "@typescript-eslint/eslint-plugin": "8.27.0",
-    "@typescript-eslint/parser": "8.27.0",
+    "@types/react-syntax-highlighter": "15.5.13",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
     "@uphold/commitlint-config": "1.1.1",
-    "better-typescript-lib": "2.7.0",
-    "commitlint-plugin-tense": "1.0.2",
+    "better-typescript-lib": "2.11.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "eslint-config-prettier": "10.1.1",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-css": "0.11.0",
     "eslint-plugin-css-modules": "2.12.0",
     "eslint-plugin-ext": "0.1.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-no-unsanitized": "4.1.2",
-    "eslint-plugin-perfectionist": "4.10.1",
+    "eslint-plugin-perfectionist": "4.12.3",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-security": "3.0.1",
     "eslint-plugin-unused-imports": "4.1.4",
     "eslint-plugin-write-good-comments": "0.2.0",
-    "lefthook": "1.11.3",
-    "next-sitemap": "4.2.2",
-    "prettier": "3.0.1",
-    "secretlint": "8.2.4",
-    "stylelint": "16.16.0",
+    "lefthook": "1.11.12",
+    "next-sitemap": "4.2.3",
+    "prettier": "3.5.3",
+    "secretlint": "9.3.1",
+    "stylelint": "16.19.1",
     "stylelint-config-css-modules": "4.4.0",
-    "stylelint-config-recommended": "15.0.0",
+    "stylelint-config-recommended": "16.0.0",
     "stylelint-css-modules-no-global-scoped-selector": "1.0.2",
     "stylelint-declaration-block-no-ignored-properties": "2.8.0",
     "stylelint-high-performance-animation": "1.11.0",
     "stylelint-no-unused-selectors": "1.0.40",
-    "stylelint-order": "6.0.4",
-    "typescript": "5.1.6"
+    "stylelint-order": "7.0.0",
+    "typescript": "5.8.3"
   },
   "name": "kk-web5",
   "overrides": {
+    "react-loader-spinner": {
+      "react": "^19.0.0",
+      "react-dom": "^19.0.0"
+    },
+    "react-scrollbar-size": {
+      "react": "^19.0.0",
+      "react-dom": "^19.0.0"
+    },
     "stylelint-css-modules-no-global-scoped-selector": {
-      "stylelint": "16.16.0"
+      "stylelint": "16.19.1"
     },
     "stylelint-no-unused-selectors": {
-      "stylelint": "16.16.0"
+      "stylelint": "16.19.1"
     }
   },
   "private": true,
