--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@hookform/error-message": "2.0.1",
     "@hookform/resolvers": "5.0.1",
+    "@next/third-parties": "15.3.1",
     "@szhsin/react-menu": "4.4.0",
     "@t3-oss/env-nextjs": "0.13.0",
     "@vercel/analytics": "1.5.0",
