--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "@vercel/speed-insights": "1.2.0",
     "axios": "1.9.0",
     "cookies-next": "5.1.0",
-    "dayjs": "1.11.13",
+    "date-fns": "4.1.0",
     "github-markdown-css": "5.2.0",
     "i18next": "25.0.2",
     "logrocket": "10.0.0",
     "logrocket-react": "6.0.3",
     "markdown-to-text": "0.1.1",
     "next": "15.3.1",
-    "nextjs-google-analytics": "2.3.7",
     "nextjs-toploader": "3.8.16",
     "nodemailer": "6.10.1",
     "parse-md": "3.0.3",
