--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@bprogress/next": "3.2.12",
     "@hookform/error-message": "2.0.1",
     "@hookform/resolvers": "5.0.1",
     "@next/third-parties": "15.3.1",
@@ -17,7 +18,6 @@
     "logrocket-react": "6.0.3",
     "markdown-to-text": "0.1.1",
     "next": "15.3.1",
-    "nextjs-toploader": "3.8.16",
     "nodemailer": "6.10.1",
     "parse-md": "3.0.3",
     "react": "^19.0.0",
