--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "logrocket-react": "6.0.3",
     "markdown-to-text": "0.1.1",
     "next": "15.3.1",
+    "next-intl": "4.1.0",
     "nodemailer": "6.10.1",
     "parse-md": "3.0.3",
     "react": "^19.0.0",
@@ -30,6 +31,8 @@
     "react-markdown": "10.1.0",
     "react-scrollbar-size": "5.0.0",
     "react-social-icons": "6.24.0",
+    "react-spacer": "1.3.0",
+    "react-switch": "7.1.0",
     "react-syntax-highlighter": "npm:@fengkx/react-syntax-highlighter@15.6.1",
     "react-textarea-autosize": "8.5.9",
     "react-toastify": "11.0.5",
