feat: add more and portfolio pages; add clsx and feather-icons-react

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@vercel/og": "0.6.8",
     "@vercel/speed-insights": "1.2.0",
     "axios": "1.9.0",
+    "clsx": "2.1.1",
     "cookies-next": "6.0.0",
     "date-fns": "4.1.0",
+    "feather-icons-react": "0.9.0",
     "github-markdown-css": "5.8.1",
     "i18next": "25.2.1",
     "logrocket": "10.1.0",
